Change of arviz summary display

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -642,7 +642,7 @@
    ],
    "source": [
     "# Get the results of the model MCMC samples.\n",
-    "az.summary(trace)"
+    "az.summary(trace, var_names=[\"sigma_a\", \"alpha\"])"
    ]
   },
   {
