--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "ce2b74e3",
    "metadata": {},
    "outputs": [
@@ -332,219 +332,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>alpha[0]</th>\n",
-       "      <td>0.070</td>\n",
-       "      <td>0.196</td>\n",
-       "      <td>-0.301</td>\n",
-       "      <td>0.443</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>7596.0</td>\n",
-       "      <td>4183.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[1]</th>\n",
-       "      <td>-0.144</td>\n",
-       "      <td>0.174</td>\n",
-       "      <td>-0.478</td>\n",
-       "      <td>0.175</td>\n",
+       "      <th>sigma_a</th>\n",
+       "      <td>0.293</td>\n",
+       "      <td>0.099</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>0.483</td>\n",
        "      <td>0.003</td>\n",
        "      <td>0.002</td>\n",
-       "      <td>4594.0</td>\n",
-       "      <td>4372.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[2]</th>\n",
-       "      <td>0.491</td>\n",
-       "      <td>0.285</td>\n",
-       "      <td>-0.012</td>\n",
-       "      <td>1.025</td>\n",
-       "      <td>0.006</td>\n",
-       "      <td>0.004</td>\n",
-       "      <td>2388.0</td>\n",
-       "      <td>3380.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[3]</th>\n",
-       "      <td>-0.117</td>\n",
-       "      <td>0.148</td>\n",
-       "      <td>-0.399</td>\n",
-       "      <td>0.152</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>3951.0</td>\n",
-       "      <td>3352.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[4]</th>\n",
-       "      <td>0.036</td>\n",
-       "      <td>0.172</td>\n",
-       "      <td>-0.279</td>\n",
-       "      <td>0.371</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>6241.0</td>\n",
-       "      <td>4250.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[5]</th>\n",
-       "      <td>0.090</td>\n",
-       "      <td>0.184</td>\n",
-       "      <td>-0.273</td>\n",
-       "      <td>0.434</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>7108.0</td>\n",
-       "      <td>4586.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[6]</th>\n",
-       "      <td>-0.030</td>\n",
-       "      <td>0.181</td>\n",
-       "      <td>-0.366</td>\n",
-       "      <td>0.318</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>6567.0</td>\n",
-       "      <td>3757.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[7]</th>\n",
-       "      <td>-0.206</td>\n",
-       "      <td>0.170</td>\n",
-       "      <td>-0.531</td>\n",
-       "      <td>0.105</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>3636.0</td>\n",
-       "      <td>3799.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[8]</th>\n",
-       "      <td>0.289</td>\n",
-       "      <td>0.242</td>\n",
-       "      <td>-0.140</td>\n",
-       "      <td>0.751</td>\n",
-       "      <td>0.004</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>4377.0</td>\n",
-       "      <td>4196.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[9]</th>\n",
-       "      <td>-0.309</td>\n",
-       "      <td>0.191</td>\n",
-       "      <td>-0.665</td>\n",
-       "      <td>0.041</td>\n",
-       "      <td>0.004</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>2874.0</td>\n",
-       "      <td>2751.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[10]</th>\n",
-       "      <td>-0.107</td>\n",
-       "      <td>0.187</td>\n",
-       "      <td>-0.474</td>\n",
-       "      <td>0.228</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>5306.0</td>\n",
-       "      <td>4449.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[11]</th>\n",
-       "      <td>-0.020</td>\n",
-       "      <td>0.195</td>\n",
-       "      <td>-0.405</td>\n",
-       "      <td>0.339</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>7089.0</td>\n",
-       "      <td>4296.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[12]</th>\n",
-       "      <td>-0.083</td>\n",
-       "      <td>0.206</td>\n",
-       "      <td>-0.482</td>\n",
-       "      <td>0.309</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>6704.0</td>\n",
-       "      <td>3777.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[13]</th>\n",
-       "      <td>-0.028</td>\n",
-       "      <td>0.232</td>\n",
-       "      <td>-0.487</td>\n",
-       "      <td>0.396</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>8885.0</td>\n",
-       "      <td>4023.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[14]</th>\n",
-       "      <td>0.397</td>\n",
-       "      <td>0.253</td>\n",
-       "      <td>-0.077</td>\n",
-       "      <td>0.861</td>\n",
-       "      <td>0.005</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>3040.0</td>\n",
-       "      <td>3128.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[15]</th>\n",
-       "      <td>0.021</td>\n",
-       "      <td>0.179</td>\n",
-       "      <td>-0.321</td>\n",
-       "      <td>0.361</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>6355.0</td>\n",
-       "      <td>3881.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[16]</th>\n",
-       "      <td>0.014</td>\n",
-       "      <td>0.195</td>\n",
-       "      <td>-0.363</td>\n",
-       "      <td>0.372</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>7546.0</td>\n",
-       "      <td>4557.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>alpha[17]</th>\n",
-       "      <td>-0.323</td>\n",
-       "      <td>0.146</td>\n",
-       "      <td>-0.581</td>\n",
-       "      <td>-0.046</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>2394.0</td>\n",
-       "      <td>3197.0</td>\n",
+       "      <td>1213.0</td>\n",
+       "      <td>922.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -559,90 +355,28 @@
        "      <td>2432.0</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sigma_a</th>\n",
-       "      <td>0.293</td>\n",
-       "      <td>0.099</td>\n",
-       "      <td>0.118</td>\n",
-       "      <td>0.483</td>\n",
-       "      <td>0.003</td>\n",
-       "      <td>0.002</td>\n",
-       "      <td>1213.0</td>\n",
-       "      <td>922.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sigma_a_log__</th>\n",
-       "      <td>-1.286</td>\n",
-       "      <td>0.355</td>\n",
-       "      <td>-2.011</td>\n",
-       "      <td>-0.681</td>\n",
-       "      <td>0.011</td>\n",
-       "      <td>0.008</td>\n",
-       "      <td>1213.0</td>\n",
-       "      <td>922.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                mean     sd  hdi_3%  hdi_97%  mcse_mean  mcse_sd  ess_bulk  \\\n",
-       "alpha[0]       0.070  0.196  -0.301    0.443      0.002    0.002    7596.0   \n",
-       "alpha[1]      -0.144  0.174  -0.478    0.175      0.003    0.002    4594.0   \n",
-       "alpha[2]       0.491  0.285  -0.012    1.025      0.006    0.004    2388.0   \n",
-       "alpha[3]      -0.117  0.148  -0.399    0.152      0.002    0.002    3951.0   \n",
-       "alpha[4]       0.036  0.172  -0.279    0.371      0.002    0.002    6241.0   \n",
-       "alpha[5]       0.090  0.184  -0.273    0.434      0.002    0.002    7108.0   \n",
-       "alpha[6]      -0.030  0.181  -0.366    0.318      0.002    0.003    6567.0   \n",
-       "alpha[7]      -0.206  0.170  -0.531    0.105      0.003    0.002    3636.0   \n",
-       "alpha[8]       0.289  0.242  -0.140    0.751      0.004    0.003    4377.0   \n",
-       "alpha[9]      -0.309  0.191  -0.665    0.041      0.004    0.003    2874.0   \n",
-       "alpha[10]     -0.107  0.187  -0.474    0.228      0.003    0.002    5306.0   \n",
-       "alpha[11]     -0.020  0.195  -0.405    0.339      0.002    0.003    7089.0   \n",
-       "alpha[12]     -0.083  0.206  -0.482    0.309      0.003    0.003    6704.0   \n",
-       "alpha[13]     -0.028  0.232  -0.487    0.396      0.002    0.003    8885.0   \n",
-       "alpha[14]      0.397  0.253  -0.077    0.861      0.005    0.003    3040.0   \n",
-       "alpha[15]      0.021  0.179  -0.321    0.361      0.002    0.002    6355.0   \n",
-       "alpha[16]      0.014  0.195  -0.363    0.372      0.002    0.003    7546.0   \n",
-       "alpha[17]     -0.323  0.146  -0.581   -0.046      0.003    0.002    2394.0   \n",
-       "intercept      0.569  0.094   0.390    0.745      0.002    0.001    2125.0   \n",
-       "sigma_a        0.293  0.099   0.118    0.483      0.003    0.002    1213.0   \n",
-       "sigma_a_log__ -1.286  0.355  -2.011   -0.681      0.011    0.008    1213.0   \n",
+       "            mean     sd  hdi_3%  hdi_97%  mcse_mean  mcse_sd  ess_bulk  \\\n",
+       "sigma_a    0.293  0.099   0.118    0.483      0.003    0.002    1213.0   \n",
+       "intercept  0.569  0.094   0.390    0.745      0.002    0.001    2125.0   \n",
        "\n",
-       "               ess_tail  r_hat  \n",
-       "alpha[0]         4183.0    1.0  \n",
-       "alpha[1]         4372.0    1.0  \n",
-       "alpha[2]         3380.0    1.0  \n",
-       "alpha[3]         3352.0    1.0  \n",
-       "alpha[4]         4250.0    1.0  \n",
-       "alpha[5]         4586.0    1.0  \n",
-       "alpha[6]         3757.0    1.0  \n",
-       "alpha[7]         3799.0    1.0  \n",
-       "alpha[8]         4196.0    1.0  \n",
-       "alpha[9]         2751.0    1.0  \n",
-       "alpha[10]        4449.0    1.0  \n",
-       "alpha[11]        4296.0    1.0  \n",
-       "alpha[12]        3777.0    1.0  \n",
-       "alpha[13]        4023.0    1.0  \n",
-       "alpha[14]        3128.0    1.0  \n",
-       "alpha[15]        3881.0    1.0  \n",
-       "alpha[16]        4557.0    1.0  \n",
-       "alpha[17]        3197.0    1.0  \n",
-       "intercept        2432.0    1.0  \n",
-       "sigma_a           922.0    1.0  \n",
-       "sigma_a_log__     922.0    1.0  "
+       "           ess_tail  r_hat  \n",
+       "sigma_a       922.0    1.0  \n",
+       "intercept    2432.0    1.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get the results of the model MCMC samples.\n",
-    "az.summary(trace, var_names=[\"sigma_a\", \"alpha\"])"
+    "az.summary(trace, var_names=[\"sigma_a\", \"intercept\"])"
    ]
   },
   {
