Bayeisan equations added

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -39,6 +39,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1194f274",
+   "metadata": {},
+   "source": [
+    "# The Bayesian Hierachial model\n",
+    "\n",
+    "\\begin{align*}  \n",
+    "\n",
+    "\\ \\hat\\theta_k &\\sim Normal(\\theta_k, \\sigma_k)\n",
+    "\\\\ \\theta_k &\\sim Normal(\\mu, \\tau) \n",
+    "\\\\ \\mu &\\sim Normal(0, 1) \n",
+    "\\\\ \\tau &\\sim HalfCauchy(0, .5) \n",
+    "\n",
+    "\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "48bdbe52-5305-4041-ae27-f91c1c5aec48",
