Add overview section

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -16,6 +16,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "44d5151a",
+   "metadata": {},
+   "source": [
+    "# Overview\n",
+    "\n",
+    "The following analysis is a Bayesian hierchial model generated using the PyMC PPL framework and the associated Rust based nutpie Hamiltonian monte Carlo sampler. The basis for this analysis is from Harrer et al. (2021) whom used R and the brms package."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "b88b2a42-318e-4509-ad12-c047ec66cf8f",
