Data descritpion section added

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -21,9 +21,13 @@
    "metadata": {},
    "source": [
     "# Overview\n",
-    "Meta analysis is a critical statistical method within any analysts toolkit a “analysis of analyses” (Glass 1976) if you will. What Glass is pointing out is that unit of analysis in meta-analysis are the results of analyses.\n",
+    "Meta analysis is a critical statistical method within any analysts toolkit a “analysis of analyses” (Glass 1976) if you will. What Glass is pointing out is that unit of analysis in meta-analysis are the results of analyses. This analysis here is an example of the a simple application of meta-analysis where the analysis of analyses is specifcally directed at the analysis of effect size estimates from the group of analyses.\n",
     "\n",
-    " The following meta analysis is a Bayesian hierchial model generated using the PyMC PPL framework and the associated Rust based nutpie Hamiltonian monte Carlo sampler. The basis for this analysis is from Harrer et al. (2021) where analysis was conducted using R and the brms package."
+    " The following meta analysis is a Bayesian hierchial model generated using the PyMC PPL framework and the associated Rust based nutpie Hamiltonian monte Carlo sampler. The basis for this analysis is from Harrer et al. (2021) where analysis was conducted using R and the brms package.\n",
+    "\n",
+    " ## The data\n",
+    "\n",
+    " The data balysed here has been downloaded from [dmetar github](https://github.com/MathiasHarrer/dmetar/blob/master/data/ThirdWave.rda) and is called the Thirdwave data set. This dataset is a collection of studies of third wave psychotherapies on percieved stress of college students. This simplify things here as this dataset comes with pre-calculated measures of effects size. This effect size here is specifcally *Hedges' g* (Henceforth just methioned as effect size estimates) and what is also critical within this analysis is the associated standard error of the  *Hedges' g* estimates."
    ]
   },
   {
