--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -40,7 +40,7 @@
     "# Import rda file into OrderedDict.\n",
     "keys = pyreadr.read_r(\"data/ThirdWave.rda\")\n",
     "\n",
-    "# Extract from OrderedDict the pandas dataframe.\n",
+    "# Extract from OrderedDict the pandas dataframes\n",
     "df = keys[\"ThirdWave\"]\n",
     "\n",
     "# Convert author values to ctegroical codes\n",
@@ -53,8 +53,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4d947fe",
+   "metadata": {},
+   "source": [
+    "Following but updating the formula from the text to be more in line with the code, the model therefore is formulated as such.\n",
+    "\\begin{align}\n",
+    "\\hat\\theta_k &\\sim \\mathcal{N}(\\mu +\\theta_k, \\sigma_k) \\notag \\\\\n",
+    "\\theta_k &\\sim \\mathcal{N}(0,\\tau) \\notag \\\\\n",
+    "\\mu &\\sim \\mathcal{N}(0,1) \\notag \\\\\n",
+    "\\tau &\\sim \\mathcal{HC}(0,0.5) \\tag{13.5} \\\\\n",
+    "\\end{align}"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "48bdbe52-5305-4041-ae27-f91c1c5aec48",
    "metadata": {},
    "outputs": [],
@@ -69,12 +83,6 @@
     "    y = pm.Normal(\"y\", mu = SMD + theta[author_id], sigma = seTE, observed=TE)\n",
     "   "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a7d1d233",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -324,17 +332,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cd666257",
-   "metadata": {},
-   "source": [
-    "\\begin{align*}\n",
-    "\\hat{\\theta}_k &\\sim \\mathcal{N}(\\theta_k, \\sigma_k^2) \\\\\n",
-    "\\theta_k &\\sim \\mathcal{N}(\\mu, \\tau^2)\n",
-    "\\end{align*}\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "ce2b74e3",
@@ -554,7 +551,9 @@
     "\n",
     "Harrer, M., Cuijpers, P., Furukawa, T.A., & Ebert, D.D. (2021). Doing Meta-Analysis with R: A Hands-On Guide. Boca Raton, FL and London: Chapmann & Hall/CRC Press. ISBN 978-0-367-61007-4.\n",
     "\n",
-    "Röver, Christian. 2017. “Bayesian Random-Effects Meta-Analysis Using the ‘Bayesmeta‘ r Package.” ArXiv Preprint 1711.08683."
+    "Röver, Christian. 2017. “Bayesian Random-Effects Meta-Analysis Using the ‘Bayesmeta‘ r Package.” ArXiv Preprint 1711.08683.\n",
+    "\n",
+    "Williams, D. R., Rast, P., & Bürkner, P. C. (2018). Bayesian meta-analysis with weakly informative prior distributions."
    ]
   }
  ],
