Make pymc model DRY

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -96,7 +96,7 @@
     "    theta = pm.Normal('theta', mu=0, sigma = tau, dims=\"Author\")\n",
     "    # Get individuasla study effects\n",
     "    ind = pm.Deterministic(\"Study estimates\", SMD + theta[author_id], dims=\"Author\") \n",
-    "    y = pm.Normal(\"y\", mu = SMD + theta[author_id], sigma = seTE, observed=TE)\n",
+    "    y = pm.Normal(\"y\", mu = ind, sigma = seTE, observed=TE)\n",
     "   "
    ]
   },
