Add prior specification reasoning and plot from book using html img tag

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "36c50986-f9c8-4ab7-ad64-5423dacf5e5f",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "b88b2a42-318e-4509-ad12-c047ec66cf8f",
    "metadata": {},
    "outputs": [],
@@ -65,29 +65,24 @@
     "\\theta_k &\\sim \\mathcal{N}(0,\\tau) \\notag \\\\\n",
     "\\mu &\\sim \\mathcal{N}(0,1) \\notag \\\\\n",
     "\\tau &\\sim \\mathcal{HC}(0,0.5) \\tag{13.5} \\\\\n",
-    "\\end{align}"
+    "\\end{align}\n",
+    "\n",
+    "How were the priors for this model selected? To start it is important to point a common reality when conducting any meta-analysis. That reality being that you are highly likely to face the common issues related to small sample sizes. This is the case here, as the dataset only has 18 data points. In small sample problems Bayesain methods shine but the selection of priors in such situations becomes even more critical. Without a bespoke prior setting routine for the analysis a good general approach is to use weakly informative priors (Williams et al. 2018). As such in meta-analysis we can make general reasonable suggestion for priors.  In the case of $mu$ the $\\mu \\sim \\mathcal{N}(0,1)$ is a reasonable prior as getting effect size for behavioural research above 2 or less than -2 is extremely rare. Setting the $\\tau$ parameter is a liitle more difficult as we must meet $\\tau > 0$ as Willaims et al. noted commonly applied prior probability distribution is the HalfCauchy distribution and $\\tau \\sim \\mathcal{HC}(0,0.5)$, because in many meta analsysis the $\\tau$ value is .3 we can cover this with a more conservative value by using .5 as it provides a much flatter distribution. \n",
+    "\n",
+    "<img src=\"https://bookdown.org/MathiasHarrer/Doing_Meta_Analysis_in_R/Doing_Meta_Analysis_in_R_files/figure-html/unnamed-chunk-432-1.png\" alt=\"Meta-Analysis Example Image\" />\n",
+    "Figure taken from Harrer et al. 2021"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "48bdbe52-5305-4041-ae27-f91c1c5aec48",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coords = {\"Authors\": df[\"Author\"]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "93e234af",
    "metadata": {},
    "outputs": [],
    "source": [
     "coords = {\"Author\": np.unique(df[\"Author\"])}\n",
     "\n",
-    "# Generate pymc Bayesian Hierachial model\n",
+    "# Generate pymc Bayesian Hierachial model.\n",
     "with pm.Model(coords=coords) as model:\n",
     "    \n",
     "    SMD = pm.Normal(\"SMD\", mu = 0, sigma = 1)\n",
@@ -391,6 +386,7 @@
     }
    ],
    "source": [
+    "# Sample from the posterior predictive distribution.\n",
     "with model:\n",
     "    pm.sample_posterior_predictive(trace, extend_inferencedata=True)"
    ]
@@ -518,6 +514,7 @@
     }
    ],
    "source": [
+    "# plot using arviz the trace of MCMC samples.\n",
     "az.plot_trace(trace, var_names=\"SMD\");\n",
     "az.plot_trace(trace, var_names=\"tau\");"
    ]
@@ -562,6 +559,7 @@
     }
    ],
    "source": [
+    "# plot posteriors\n",
     "az.plot_posterior(trace,  var_names=[\"SMD\", \"tau\"]);"
    ]
   },
@@ -591,7 +589,8 @@
     }
    ],
    "source": [
-    "# To coinside with brms output in Harner et al. smaller number of pp samples used than default.\n",
+    "# To coincide with brms output in Harner et al. \n",
+    "# smaller number of pp samples used than default.\n",
     "az.plot_ppc(trace, num_pp_samples=50);"
    ]
   },
@@ -602,7 +601,7 @@
    "source": [
     "# Interpreting model results\n",
     "\n",
-    "The between study heterogenity has been estimated $\\tau$ = .29, CI [0.10, 0.49]. The fixed population effect $\\mu$ = .57, CI [0.39, 0.76] as formulated within our model specification. Recalling that the dependent variable was an effect size measure the reuslt of the analysis then suggest that psychotherpay interventions had a moderate effect becuase this is a Bayesian analysis we are not constrained to frame the results in terms of a Null hypotheis signifcane test. Howeve we would benefit from visualisations of the continous nature of the measures of effect estimated from the model.  "
+    "The between study heterogenity has been estimated $\\tau$ = .29, CI [0.10, 0.49]. The fixed population effect $\\mu$ = .57, CI [0.39, 0.76] as formulated within our model specification. Recalling that the dependent variable was an effect size measure the reuslt of the analysis then suggest that psychotherpay interventions had a moderate effect becuase this is a Bayesian analysis we are not constrained to frame the results in terms of a Null hypotheis signifcane test. However, we would benefit from visualisations of the continous nature of the measures of effect estimated from the model.  "
    ]
   },
   {
@@ -668,6 +667,7 @@
     }
    ],
    "source": [
+    "# Plot empirical cumulative distributing function.\n",
     "az.plot_ecdf(trace.posterior.SMD);"
    ]
   },
@@ -705,6 +705,7 @@
     }
    ],
    "source": [
+    "# Plot a arviz forest plot.\n",
     "az.plot_forest(trace, var_names=\"Study estimates\", combined= True, hdi_prob=.95);"
    ]
   },
