Add tile fro model section and typo fixes

--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -25,11 +25,11 @@
     "# Overview\n",
     "Meta analysis is a critical statistical method within any analysts toolkit an “analysis of analyses” (Glass 1976) if you will. What Glass is pointing out is that unit of analysis in meta-analysis are the results of analyses. This analysis here is an example of the a simple application of meta-analysis where the analysis of analyses is specifcally directed at the analysis of effect size estimates from the group of analyses.\n",
     "\n",
-    " The following meta analysis is a Bayesian hierchial model (the basis of basic Bayeisan meta analysis) generated using the PyMC PPL framework and the associated Rust based nutpie Hamiltonian monte Carlo sampler. The basis for this analysis is from Harrer et al. (2021) where analysis was conducted using R and the brms package.\n",
+    " The following meta-analysis is a Bayesian hierchial model (the basis of basic Bayeisan meta analysis) generated using the PyMC PPL framework and the associated Rust based nutpie Hamiltonian monte Carlo sampler. The basis for this analysis is from Harrer et al. (2021) where analysis was conducted using R and the brms package.\n",
     "\n",
     " ## The data\n",
     "\n",
-    " The data analysed here has been downloaded from the [dmetar github](https://github.com/MathiasHarrer/dmetar/blob/master/data/ThirdWave.rda) and is called the Thirdwave data set. This dataset is a collection of studies of third wave psychotherapies effect on the percieved stress of college students. The dataset comes pre-calculated measures of effects size which simplifies the process of analysis dmeosntraion her significantly. The effect size type analaysed here specifcally is *Hedges' g* (Henceforth just methioned as effect size estimates) and the asoscited standard error of the effect size estimates."
+    " The data analysed here has been downloaded from the [dmetar github](https://github.com/MathiasHarrer/dmetar/blob/master/data/ThirdWave.rda) and is called the Thirdwave data set. This dataset is a collection of studies of third wave psychotherapies effect on the percieved stress of college students. The dataset here comes pre-calculated measures of effects size which simplifies the process of the analysis demonstration here significantly. The specific effect size type analysed here is *Hedges' g* (Henceforth just mentioned as effect size estimates) and the assosciated standard error of the effect size estimates."
    ]
   },
   {
@@ -59,6 +59,8 @@
    "id": "d4d947fe",
    "metadata": {},
    "source": [
+    "# The Model and it priors\n",
+    "\n",
     "Following but updating the formula from the text to be more in line with the code, the model therefore is formulated as such.\n",
     "\\begin{align}\n",
     "\\hat\\theta_k &\\sim \\mathcal{N}(\\mu +\\theta_k, \\sigma_k) \\notag \\\\\n",
