--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 68,
    "id": "b88b2a42-318e-4509-ad12-c047ec66cf8f",
    "metadata": {},
    "outputs": [],
@@ -55,6 +55,9 @@
     "\n",
     "# Extract from OrderedDict the pandas dataframes\n",
     "df = keys[\"ThirdWave\"]\n",
+    "\n",
+    "#order pandas datfrme descending order\n",
+    "df = df.sort_values(by='TE', ascending=False)\n",
     "\n",
     "# Create a mapping of authors to numerical codes based on their order of appearance\n",
     "author_mapping = {author: idx for idx, author in enumerate(df['Author'].unique())}\n",
@@ -94,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "id": "93e234af",
    "metadata": {},
    "outputs": [],
@@ -115,31 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "4a3b4025",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Author': array(['Call et al.', 'Cavanagh et al.', 'DanitzOrsillo',\n",
-      "       'Frazier et al.', 'Frogeli et al.', 'Gallego et al.',\n",
-      "       'Hazlett-Stevens & Oren', 'Hintz et al.', 'Kang et al.',\n",
-      "       'Kuhlmann et al.', 'Lever Taylor et al.', 'Phang et al.',\n",
-      "       'Rasanen et al.', 'Ratanasiripong', 'Shapiro et al.',\n",
-      "       'Song & Lindquist', 'Warnecke et al.', 'de Vibe et al.'],\n",
-      "      dtype=object)} {'Call et al.': 0, 'Cavanagh et al.': 1, 'DanitzOrsillo': 2, 'de Vibe et al.': 3, 'Frazier et al.': 4, 'Frogeli et al.': 5, 'Gallego et al.': 6, 'Hazlett-Stevens & Oren': 7, 'Hintz et al.': 8, 'Kang et al.': 9, 'Kuhlmann et al.': 10, 'Lever Taylor et al.': 11, 'Phang et al.': 12, 'Rasanen et al.': 13, 'Ratanasiripong': 14, 'Shapiro et al.': 15, 'Song & Lindquist': 16, 'Warnecke et al.': 17}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(coords, author_mapping)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "id": "85c88502",
    "metadata": {},
    "outputs": [
@@ -285,7 +264,7 @@
        "                    </td>\n",
        "                    <td>1300</td>\n",
        "                    <td>0</td>\n",
-       "                    <td>0.56</td>\n",
+       "                    <td>0.59</td>\n",
        "                    <td>7</td>\n",
        "                </tr>\n",
        "            \n",
@@ -298,7 +277,7 @@
        "                    </td>\n",
        "                    <td>1300</td>\n",
        "                    <td>0</td>\n",
-       "                    <td>0.61</td>\n",
+       "                    <td>0.58</td>\n",
        "                    <td>7</td>\n",
        "                </tr>\n",
        "            \n",
@@ -311,7 +290,7 @@
        "                    </td>\n",
        "                    <td>1300</td>\n",
        "                    <td>0</td>\n",
-       "                    <td>0.60</td>\n",
+       "                    <td>0.54</td>\n",
        "                    <td>7</td>\n",
        "                </tr>\n",
        "            \n",
@@ -337,8 +316,8 @@
        "                    </td>\n",
        "                    <td>1300</td>\n",
        "                    <td>0</td>\n",
-       "                    <td>0.58</td>\n",
-       "                    <td>3</td>\n",
+       "                    <td>0.61</td>\n",
+       "                    <td>7</td>\n",
        "                </tr>\n",
        "            \n",
        "                <tr>\n",
@@ -350,7 +329,7 @@
        "                    </td>\n",
        "                    <td>1300</td>\n",
        "                    <td>0</td>\n",
-       "                    <td>0.56</td>\n",
+       "                    <td>0.57</td>\n",
        "                    <td>7</td>\n",
        "                </tr>\n",
        "            \n",
@@ -360,7 +339,7 @@
        "</div>\n"
       ],
       "text/plain": [
-       "<nutpie.sample._BackgroundSampler at 0x7f66d398ab10>"
+       "<nutpie.sample._BackgroundSampler at 0x7f66fbe1cf90>"
       ]
      },
      "metadata": {},
