--- a/meta_analysis.ipynb
+++ b/meta_analysis.ipynb
@@ -5,15 +5,7 @@
    "execution_count": 1,
    "id": "36c50986-f9c8-4ab7-ad64-5423dacf5e5f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING (pytensor.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import all neccesary python libraries for analysis.\n",
     "import pymc as pm\n",
@@ -275,59 +267,7 @@
        "                    </td>\n",
        "                    <td>1300</td>\n",
        "                    <td>0</td>\n",
-       "                    <td>0.56</td>\n",
-       "                    <td>15</td>\n",
-       "                </tr>\n",
-       "            \n",
-       "                <tr>\n",
-       "                    <td class=\"progress-cell\">\n",
-       "                        <progress\n",
-       "                            max=\"1300\"\n",
-       "                            value=\"1300\">\n",
-       "                        </progress>\n",
-       "                    </td>\n",
-       "                    <td>1300</td>\n",
-       "                    <td>0</td>\n",
-       "                    <td>0.55</td>\n",
-       "                    <td>7</td>\n",
-       "                </tr>\n",
-       "            \n",
-       "                <tr>\n",
-       "                    <td class=\"progress-cell\">\n",
-       "                        <progress\n",
-       "                            max=\"1300\"\n",
-       "                            value=\"1300\">\n",
-       "                        </progress>\n",
-       "                    </td>\n",
-       "                    <td>1300</td>\n",
-       "                    <td>0</td>\n",
-       "                    <td>0.57</td>\n",
-       "                    <td>7</td>\n",
-       "                </tr>\n",
-       "            \n",
-       "                <tr>\n",
-       "                    <td class=\"progress-cell\">\n",
-       "                        <progress\n",
-       "                            max=\"1300\"\n",
-       "                            value=\"1300\">\n",
-       "                        </progress>\n",
-       "                    </td>\n",
-       "                    <td>1300</td>\n",
-       "                    <td>0</td>\n",
        "                    <td>0.63</td>\n",
-       "                    <td>7</td>\n",
-       "                </tr>\n",
-       "            \n",
-       "                <tr>\n",
-       "                    <td class=\"progress-cell\">\n",
-       "                        <progress\n",
-       "                            max=\"1300\"\n",
-       "                            value=\"1300\">\n",
-       "                        </progress>\n",
-       "                    </td>\n",
-       "                    <td>1300</td>\n",
-       "                    <td>0</td>\n",
-       "                    <td>0.62</td>\n",
        "                    <td>7</td>\n",
        "                </tr>\n",
        "            \n",
@@ -344,13 +284,65 @@
        "                    <td>7</td>\n",
        "                </tr>\n",
        "            \n",
+       "                <tr>\n",
+       "                    <td class=\"progress-cell\">\n",
+       "                        <progress\n",
+       "                            max=\"1300\"\n",
+       "                            value=\"1300\">\n",
+       "                        </progress>\n",
+       "                    </td>\n",
+       "                    <td>1300</td>\n",
+       "                    <td>0</td>\n",
+       "                    <td>0.59</td>\n",
+       "                    <td>7</td>\n",
+       "                </tr>\n",
+       "            \n",
+       "                <tr>\n",
+       "                    <td class=\"progress-cell\">\n",
+       "                        <progress\n",
+       "                            max=\"1300\"\n",
+       "                            value=\"1300\">\n",
+       "                        </progress>\n",
+       "                    </td>\n",
+       "                    <td>1300</td>\n",
+       "                    <td>0</td>\n",
+       "                    <td>0.56</td>\n",
+       "                    <td>7</td>\n",
+       "                </tr>\n",
+       "            \n",
+       "                <tr>\n",
+       "                    <td class=\"progress-cell\">\n",
+       "                        <progress\n",
+       "                            max=\"1300\"\n",
+       "                            value=\"1300\">\n",
+       "                        </progress>\n",
+       "                    </td>\n",
+       "                    <td>1300</td>\n",
+       "                    <td>0</td>\n",
+       "                    <td>0.61</td>\n",
+       "                    <td>7</td>\n",
+       "                </tr>\n",
+       "            \n",
+       "                <tr>\n",
+       "                    <td class=\"progress-cell\">\n",
+       "                        <progress\n",
+       "                            max=\"1300\"\n",
+       "                            value=\"1300\">\n",
+       "                        </progress>\n",
+       "                    </td>\n",
+       "                    <td>1300</td>\n",
+       "                    <td>0</td>\n",
+       "                    <td>0.50</td>\n",
+       "                    <td>15</td>\n",
+       "                </tr>\n",
+       "            \n",
        "            </tr>\n",
        "        </tbody>\n",
        "    </table>\n",
        "</div>\n"
       ],
       "text/plain": [
-       "<nutpie.sample._BackgroundSampler at 0x7f9e0dee8a10>"
+       "<nutpie.sample._BackgroundSampler at 0x7b981458b2d0>"
       ]
      },
      "metadata": {},
@@ -735,7 +727,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "pymc_env",
    "language": "python",
    "name": "python3"
   },
@@ -749,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
